--- a/EcdsaDotNet/EcdsaDotNet/CPSSEcdsa.csproj
+++ b/EcdsaDotNet/EcdsaDotNet/CPSSEcdsa.csproj
@@ -1,23 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;netstandard2.0;netstandard2.1;net40;net452</TargetFrameworks>
-    <RootNamespace>EllipticCurve</RootNamespace>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>CPSS.EllipticCurve</RootNamespace>
     <PackOnBuild>true</PackOnBuild>
-    <PackageId>starkbank-ecdsa</PackageId>
-    <PackageVersion>1.3.1</PackageVersion>
-    <Authors>Stark Bank</Authors>
+    <PackageId>cpss-ecdsa</PackageId>
+    <PackageVersion>1.3.1.a</PackageVersion>
+    <Authors>Stark Bank, XGDFalcon</Authors>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
-    <Owners>Stark Bank</Owners>
-    <PackageProjectUrl>https://github.com/starkbank/ecdsa-dotnet</PackageProjectUrl>
+    <Owners>Stark Bank, XGDFalcon</Owners>
+    <PackageProjectUrl>https://github.com/cpssw/ecdsa-dotnet</PackageProjectUrl>
     <Summary>Pure C# implementation of the Elliptic Curve Digital Signature Algorithm (ECDSA)</Summary>
-    <Title>Stark Bank ECDSA</Title>
-    <Description>Pure C# implementation of the Elliptic Curve Digital Signature Algorithm (ECDSA) by Stark Bank</Description>
+    <Title>.NET 5.0 ECDSA</Title>
+    <Description>For of a pure C# implementation of the Elliptic Curve Digital Signature Algorithm (ECDSA) by Stark Bank updated to .NET 5.0 with other improvements.</Description>
     <PackageTags>ecdsa, digital-signature, elliptic-curve</PackageTags>
-    <ReleaseVersion>1.3.1</ReleaseVersion>
+    <ReleaseVersion>1.3.1.a</ReleaseVersion>
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
-
   <Choose>
     <When Condition=" '$(Configuration)'=='Debug' ">
       <PropertyGroup>
@@ -32,8 +30,7 @@
       </PropertyGroup>
     </When>
   </Choose>
-
   <ItemGroup>
-    <Folder Include="utils\" />
+    <Folder Include="Utils\" />
   </ItemGroup>
 </Project>
